--- a/.ansible/deploy.yaml
+++ b/.ansible/deploy.yaml
@@ -10,14 +10,14 @@
     - include_role:
         name: docker
         tasks_from: stack_teardown
-      when: '{{ clean_install | default(no) }}'
+      when: clean_install | default(no)
 
     - name: 'Wipe all persistent data'
       file:
         state: absent
         path: '{{ app_dir }}'
       become: yes
-      when: '{{ clean_install | default(no) }}'
+      when: clean_install | default(no)
 
     - include_role:
         name: common
