--- a/.drone.yaml
+++ b/.drone.yaml
@@ -19,9 +19,9 @@ steps:
       vault_password:
         from_secret: ansible_vault_password
     commands:
-      # dynamically select inventory based on Git branch/tag
+      # dynamically select inventory based on git branch
       - version=$DRONE_BRANCH
-      - if [ ! -z $DRONE_TAG ]; then version=production; fi
+      - if [ $DRONE_BRANCH = stable  ]; then version=production; fi
       - /bin/drone-ansible --inventory .ansible/inventory/$$version/hosts
 
 trigger:
