--- a/.drone.yaml
+++ b/.drone.yaml
@@ -13,16 +13,38 @@ steps:
       ANSIBLE_CONFIG: .ansible/ansible.cfg
     settings:
       playbook: .ansible/deploy.yaml
+      inventory: .ansible/inventory/development/hosts
       galaxy: .ansible/roles/requirements.yaml
       private_key:
-        from_secret: ansible_private_key
+        from_secret: automation_id_rsa
       vault_password:
         from_secret: ansible_vault_password
-    commands:
-      # dynamically select inventory based on Git branch/tag
-      - version=$DRONE_BRANCH
-      - if [ ! -z $DRONE_TAG ]; then version=production; fi
-      - /bin/drone-ansible --inventory .ansible/inventory/$$version/hosts
+    when:
+      branch:
+        - development
+      event:
+        - push
+
+  - name: deploy
+    image: plugins/ansible:3
+    environment:
+      ANSIBLE_CONFIG: .ansible/ansible.cfg
+      LDAP_ADMIN_PASSWORD:
+        from_secret: ldap_admin_password
+    settings:
+      playbook: .ansible/deploy.yaml
+      inventory: .ansible/inventory/producton/hosts
+      galaxy: .ansible/roles/requirements.yaml
+      private_key:
+        from_secret: automation_id_rsa
+      vault_password:
+        from_secret: ansible_vault_password
+    when:
+      branch:
+        - stable
+      event:
+        - push
+
 
 trigger:
   branch:
