--- a/.ansible/inventory/stable/group_vars/tools/config.yaml
+++ b/.ansible/inventory/stable/group_vars/tools/config.yaml
@@ -1,2 +1,2 @@
 domain: ldap.diesel.net
-admin_password: '{{ lookup('env', 'LDAP_ADMIN_PASSWORD') }}'
+admin_password: "{{ lookup('env', 'LDAP_ADMIN_PASSWORD') }}"
