Add a service update at the end

--- a/.ansible/deploy.yaml
+++ b/.ansible/deploy.yaml
@@ -109,4 +109,11 @@
         name: docker
         tasks_from: stack_deploy
 
+    - include_role:
+        name: docker
+        tasks_from: service_update
+      vars:
+        options: --force
+        docker_service: main
+
 
