--- a/.ansible/roles/requirements.yaml
+++ b/.ansible/roles/requirements.yaml
@@ -7,3 +7,8 @@
   scm: git
   src: "git@github.com:Diesel-Net/ansible-role-docker.git"
   version: 1.11.3
+
+- name: traefik
+  scm: git
+  src: "git@github.com:Diesel-Net/ansible-role-traefik.git"
+  version: 1.0.2
