--- a/.ansible/roles/requirements.yaml
+++ b/.ansible/roles/requirements.yaml
@@ -1,14 +1,9 @@
-- name: common
+- name: application
   scm: git
-  src: "git@github.com:Diesel-Net/ansible-role-common.git"
-  version: 1.2.0
+  src: "git@github.com:Diesel-Net/ansible-role-application.git"
+  version: 2.0.0
 
 - name: docker
   scm: git
   src: "git@github.com:Diesel-Net/ansible-role-docker.git"
-  version: 1.11.3
-
-- name: traefik
-  scm: git
-  src: "git@github.com:Diesel-Net/ansible-role-traefik.git"
-  version: 1.0.2
+  version: 2.0.0
