--- a/.ansible/roles/requirements.yaml
+++ b/.ansible/roles/requirements.yaml
@@ -1,9 +1,14 @@
-- name: application
-  scm: git
-  src: "git@github.com:Diesel-Net/ansible-role-application.git"
-  version: 2.0.0
+roles:
+  - name: application
+    scm: git
+    src: "git@github.com:Diesel-Net/ansible-role-application.git"
+    version: 2.0.0
 
-- name: docker
-  scm: git
-  src: "git@github.com:Diesel-Net/ansible-role-docker.git"
-  version: 2.0.0
+  - name: docker
+    scm: git
+    src: "git@github.com:Diesel-Net/ansible-role-docker.git"
+    version: 2.0.0
+
+collections:
+
+  - name: community.general
