--- a/.ansible/templates/docker-compose.yaml
+++ b/.ansible/templates/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
       - {{ config_dir }}/certs/:/container/service/slapd/assets/certs/
-      - {{ config_dir }}/slapd:/etc/ldap/slapd.d
-      - {{ data_dir }}:/var/lib/ldap
+      - {{ data_dir }}/slapd:/etc/ldap/slapd.d # this should be treated as data !!!
+      - {{ data_dir }}/ldap:/var/lib/ldap
 
       # note: setting the hostname as shown in the docs causes phpLDAPadmin container
       # (which is on the same swarm node and docker network) to resolve this
