try nfs mounting

--- a/.ansible/inventories/prod/group_vars/all/config.yaml
+++ b/.ansible/inventories/prod/group_vars/all/config.yaml
@@ -1,2 +1,5 @@
 domain: ldap.diesel.net
 admin_password: "{{ lookup('env', 'LDAP_ADMIN_PASSWORD') }}"
+
+nfs_host: nas.diesel.net
+nsf_path: /volume1/OpenLDAP
