--- a/.ansible/inventories/prod/group_vars/all/config.yaml
+++ b/.ansible/inventories/prod/group_vars/all/config.yaml
@@ -2,4 +2,4 @@ domain: ldap.diesel.net
 admin_password: "{{ lookup('env', 'LDAP_ADMIN_PASSWORD') }}"
 
 nfs_host: nas.diesel.net
-nsf_path: /volume1/OpenLDAP
+nfs_path: /volume1/OpenLDAP
