mount each nfs subdir as separate volumes

--- a/.ansible/templates/docker-compose.yaml
+++ b/.ansible/templates/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
       - {{ config_dir }}/certs/:/container/service/slapd/assets/certs/
 
 {% if nfs_host is defined %}
-      - ldap-database/slapd:/etc/ldap/slapd.d # this should be treated as data !!!
-      - ldap-database/ldap:/var/lib/ldap
+      - slapd-config:/etc/ldap/slapd.d # this should be treated as data !!!
+      - ldap-database:/var/lib/ldap
 {% else %}
       - {{ data_dir }}/slapd:/etc/ldap/slapd.d # this should be treated as data !!!
       - {{ data_dir }}/ldap:/var/lib/ldap
@@ -50,10 +50,18 @@ services:
 
 {% if nfs_host is defined %}
 volumes:
+  
   ldap-database:
     driver: local
     driver_opts:
       type: nfs
       o: addr={{ nfs_host }},rw,nfsvers=4,async
-      device: :{{ nfs_path }}
+      device: :{{ nfs_path }}/ldap
+  
+  slapd-config:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr={{ nfs_host }},rw,nfsvers=4,async
+      device: :{{ nfs_path }}/slapd
 {% endif %}
