--- a/.ansible/deploy.yaml
+++ b/.ansible/deploy.yaml
@@ -8,14 +8,14 @@
     - include_role:
         name: docker
         tasks_from: stack_teardown
-      when: clean_install | default(false)
+      when: version == "dev"
 
     - name: 'Wipe all persistent data'
       file:
         state: absent
         path: '{{ app_dir }}'
       become: yes
-      when: clean_install | default(false)
+      when: version == "dev"
 
     - include_role:
         name: application
@@ -24,6 +24,7 @@
     - include_role:
         name: application
         tasks_from: make_data_dir
+      when: version == "dev"
 
     - name: Ensure {{ config_dir }}/certs exists
       file:
@@ -34,11 +35,13 @@
       file:
         state: directory
         path: '{{ data_dir }}/slapd'
+      when: version == "dev"
 
     - name: Ensure {{ data_dir }}/ldap exists
       file:
         state: directory
         path: '{{ data_dir }}/ldap'
+      when: version == "dev"
 
     - name: 'Loosen config dir permissions'
       file:
@@ -51,6 +54,7 @@
         state: directory
         path: '{{ data_dir }}'
         mode: 'u=rwx,g=rwx,o=rwx'
+      when: version == "dev"
 
     - name: 'Copy dhparam.pem to {{ config_dir }}/certs/custom_dhparam.pem'
       copy:
